feat: Add mobile navigation menu and mobile-friendly meal plan selection dropdowns to improve mobile responsiveness.

--- a/advice.html
+++ b/advice.html
@@ -15,6 +15,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="nav-logo"><span style="font-size: 1.5rem;">🥗</span> BerilDiet</a>
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
@@ -62,6 +63,7 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
