--- a/bmi_calculator.html
+++ b/bmi_calculator.html
@@ -20,6 +20,7 @@
             <a href="index.html" class="nav-logo">
                 <span style="font-size: 1.5rem;">🥗</span> BerilDiet
             </a>
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
@@ -144,6 +145,7 @@
     </footer>
 
     <script src="bmi.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
