--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Optional Icons -->
 </head>
 
 <body>
@@ -21,6 +20,7 @@
             <a href="index.html" class="nav-logo">
                 <span style="font-size: 1.5rem;">🥗</span> BerilDiet
             </a>
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
             <div class="nav-links">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
@@ -95,6 +95,7 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
