feat: add food exchange table page, update navigation, and refine page layouts.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
                 <a href="bmi_calculator.html" class="nav-link">BMI Calculator</a>
+                <a href="food_exchange.html" class="nav-link">Exchange Table</a>
                 <a href="advice.html" class="nav-link">General Advice</a>
                 <a href="nutrition.html" class="nav-link">Mindful Nutrition</a>
                 <a href="fruit.html" class="nav-link">Fruit Portions</a>
@@ -84,6 +85,13 @@
                 <h3>BMI Calculator</h3>
                 <p>Track your progress and calculate your daily calorie needs for weight loss.</p>
                 <span style="color: var(--primary); font-weight: 600;">Calculate Now &rarr;</span>
+            </a>
+
+            <a href="food_exchange.html" class="card">
+                <div style="font-size: 2.5rem; margin-bottom: 1rem;">📋</div>
+                <h3>Exchange Table</h3>
+                <p>Learn food equivalents and portion sizes across all food groups.</p>
+                <span style="color: var(--primary); font-weight: 600;">Explore Table &rarr;</span>
             </a>
 
         </div>
