--- a/nutrition.html
+++ b/nutrition.html
@@ -20,6 +20,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
                 <a href="bmi_calculator.html" class="nav-link">BMI Calculator</a>
+                <a href="food_exchange.html" class="nav-link">Exchange Table</a>
                 <a href="advice.html" class="nav-link">General Advice</a>
                 <a href="nutrition.html" class="nav-link active">Mindful Nutrition</a>
                 <a href="fruit.html" class="nav-link">Fruit Portions</a>
@@ -28,10 +29,16 @@
         </div>
     </nav>
 
-    <main class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
+    <header class="hero-small">
+        <div class="container">
+            <h1>Mindful Nutrition</h1>
+            <p>Understand the "Why" and "How" of eating.</p>
+        </div>
+    </header>
+
+    <main class="container" style="margin-top: -3rem; position: relative; z-index: 10;">
 
         <div style="max-width: 800px; margin: 0 auto;">
-            <h1 style="text-align: center; margin-bottom: 2rem;">What is Mindful Nutrition?</h1>
 
             <div class="card">
                 <p>Your eating habits—what you constantly eat and drink—are the most important factors affecting your
