--- a/tea.html
+++ b/tea.html
@@ -20,6 +20,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
                 <a href="bmi_calculator.html" class="nav-link">BMI Calculator</a>
+                <a href="food_exchange.html" class="nav-link">Exchange Table</a>
                 <a href="advice.html" class="nav-link">General Advice</a>
                 <a href="nutrition.html" class="nav-link">Mindful Nutrition</a>
                 <a href="fruit.html" class="nav-link">Fruit Portions</a>
@@ -28,36 +29,37 @@
         </div>
     </nav>
 
-    <main class="container" style="padding-top: 4rem; padding-bottom: 4rem; text-align: center;">
-
-        <div class="card" style="max-width: 600px; margin: 0 auto; background: #fffbe6; border: 1px solid #ffe58f;">
-            <div style="font-size: 4rem; margin-bottom: 1rem;">🍵</div>
-            <h1 style="color: #d48806;">Metabolism Tea</h1>
-            <p class="lead">A soothing blend to boost digestion and metabolism.</p>
-            <p><em>Drink after meals or whenever you want.</em></p>
-
-            <div
-                style="text-align: left; margin-top: 2rem; background: white; padding: 2rem; border-radius: var(--radius-md);">
-                <h3>Ingredients</h3>
-                <ul style="margin-left: 1.5rem; margin-bottom: 2rem; line-height: 1.8;">
-                    <li>1 Liter Water</li>
-                    <li>5 Black Peppercorns</li>
-                    <li>5 Cloves</li>
-                    <li>1 Cinnamon Stick</li>
-                    <li>1 piece of Ginger</li>
-                    <li>(Optional) 2 pinches of Rosemary</li>
-                    <li>(Optional) Apple peel or slices</li>
-                </ul>
-
-                <h3>Preparation</h3>
-                <ol style="margin-left: 1.5rem; line-height: 1.8;">
-                    <li>Combine all ingredients in a pot.</li>
-                    <li>Bring to a boil/brew for 5 minutes.</li>
-                    <li>Strain and serve warm.</li>
-                </ol>
-            </div>
+    <header class="hero-small">
+        <div class="container">
+            <h1>Metabolism Tea</h1>
+            <p>A soothing blend to boost digestion and metabolism.</p>
         </div>
+    </header>
 
+    <main class="container" style="margin-top: -3rem; position: relative; z-index: 10;">
+        <p style="text-align: center; color: var(--text-muted); margin-bottom: 1rem; font-style: italic;">Drink after
+            meals or whenever you want.</p>
+
+        <div class="card" style="max-width: 600px; margin: 0 auto;">
+            <div style="font-size: 4rem; text-align: center; margin-bottom: 2rem;">🍵</div>
+            <h3>Ingredients</h3>
+            <ul style="margin-left: 1.5rem; margin-bottom: 2rem; line-height: 1.8;">
+                <li>1 Liter Water</li>
+                <li>5 Black Peppercorns</li>
+                <li>5 Cloves</li>
+                <li>1 Cinnamon Stick</li>
+                <li>1 piece of Ginger</li>
+                <li>(Optional) 2 pinches of Rosemary</li>
+                <li>(Optional) Apple peel or slices</li>
+            </ul>
+
+            <h3>Preparation</h3>
+            <ol style="margin-left: 1.5rem; line-height: 1.8;">
+                <li>Combine all ingredients in a pot.</li>
+                <li>Bring to a boil/brew for 5 minutes.</li>
+                <li>Strain and serve warm.</li>
+            </ol>
+        </div>
     </main>
 
     <footer>
