--- a/advice.html
+++ b/advice.html
@@ -20,6 +20,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
                 <a href="bmi_calculator.html" class="nav-link">BMI Calculator</a>
+                <a href="food_exchange.html" class="nav-link">Exchange Table</a>
                 <a href="advice.html" class="nav-link active">General Advice</a>
                 <a href="nutrition.html" class="nav-link">Mindful Nutrition</a>
                 <a href="fruit.html" class="nav-link">Fruit Portions</a>
@@ -28,12 +29,14 @@
         </div>
     </nav>
 
-    <main class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
-
-        <div style="text-align: center; margin-bottom: 3rem;">
+    <header class="hero-small">
+        <div class="container">
             <h1>General Advice</h1>
-            <p class="lead">Essential guidelines for a healthier life.</p>
+            <p>Essential guidelines for a healthier life.</p>
         </div>
+    </header>
+
+    <main class="container" style="margin-top: -3rem; position: relative; z-index: 10;">
 
         <div class="card" style="margin-bottom: 3rem;">
             <h2>Daily Habits</h2>
