--- a/bmi_calculator.html
+++ b/bmi_calculator.html
@@ -25,6 +25,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="meal_plans.html" class="nav-link">Meal Plans</a>
                 <a href="bmi_calculator.html" class="nav-link active">BMI Calculator</a>
+                <a href="food_exchange.html" class="nav-link">Exchange Table</a>
                 <a href="advice.html" class="nav-link">General Advice</a>
                 <a href="nutrition.html" class="nav-link">Mindful Nutrition</a>
                 <a href="fruit.html" class="nav-link">Fruit Portions</a>
@@ -33,7 +34,7 @@
         </div>
     </nav>
 
-    <header class="hero">
+    <header class="hero-small">
         <div class="container">
             <h1>BMI & Calorie Calculator</h1>
             <p>Calculate your Body Mass Index and daily calorie needs for your weight loss journey.</p>
